WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218851
[LFC][Integration] vertical-align: super and sub values are not supported yet.
https://bugs.webkit.org/show_bug.cgi?id=218851
Summary
[LFC][Integration] vertical-align: super and sub values are not supported yet.
alan
Reported
2020-11-12 08:50:04 PST
ssia
Attachments
Patch
(2.35 KB, patch)
2020-11-12 08:53 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-11-12 08:53:02 PST
Created
attachment 413938
[details]
Patch
EWS
Comment 2
2020-11-12 09:37:47 PST
Committed
r269734
: <
https://trac.webkit.org/changeset/269734
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413938
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-11-12 09:38:15 PST
<
rdar://problem/71330355
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug