[LFC][Integration] vertical-align: super and sub values are not supported yet. https://bugs.webkit.org/show_bug.cgi?id=218851

Reviewed by Antti Koivisto.

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForChild):


Canonical link: https://commits.webkit.org/231513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269734 268f45cc-cd09-0410-ab3c-d52691b4dbfc